2003-08-01  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b87

	* Rework of configuration step 2, so it displays the problem locales
	  closely grouped together

2003-08-01  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b86
	
	* latest french update from curio

2003-08-02  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b85

	* fixed bug in nls.php

2003-08-02  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b84

	* updated translation
	
	* added pt_PT

	* removed fr_CA, added fr_FR

2003-08-02  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b83

	* added missing nb_NO files

	* fixed little langage bug, when gallery is in nuke

2003-08-01  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b82

	* Stop config items appearing if they are the only choice

2003-08-01  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b81

        * removed little old code

2003-08-01  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b80

	* Fix bug with *Nuke integration where we could generate an
          incorrect URL, so language changing didn't work (Thanks
          Warren)

2003-08-01  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b79

	* Fix error in index.php caused by weird typo

2003-08-01  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b78

	* Moved language locale configs to the end of Step 2 and added 
	  "(Advanced)" to each one.

2003-08-01  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b77

	* default ML mode is now 3

	* bug fix for languages for which there are no suitable locales

2003-08-01  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b76

	* removed nl_BE and no_NO from locale folder

2003-07-31  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b75

	* removed stray "?" in sort_album.php

	* made drawSelect able to handle multiple selections

	* made printAlbumOptionList able to produce a list of readable files

	* modified ml_pulldown for offline browsing

2003-07-31  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b74

	* Changed no_NO (Norsk) to correct nb_NO (Norsk bokmal)