@@ -52,6 +52,9 @@ if (!strcmp($submit, _("Save"))) {
 		$gallery->album->setItemCaptureDate($index, $dateArray );
 		foreach ($extra_fields as $field => $value)
 		{
+			if (get_magic_quotes_gpc()) {
+				$value=stripslashes($value);    
+			}
 			$gallery->album->setExtraField($index, $field, trim(strip_tags($value)));
 		}
 		$gallery->album->save();
