@@ -1,3 +1,8 @@
+2003-08-01  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b88
+
+	* strip slashes from title, summary, extra fields if magic quotes are 
+	  on.
+
 2003-08-01  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b87
 
 	* Rework of configuration step 2, so it displays the problem locales
